Ahi, removendo links de músicas sem página

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">Madrigal da ACC</h1>
       </a>
-      
+
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Início</a></li>
@@ -233,8 +233,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                   <img src="assets/img/songs/stickers-templar-cross-non-nobis-domine.jpg" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>Non Nobis Domine</h4>
-                    <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                  </div>
+<!--                     <a href="" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+ -->                  </div>
               </div>
             </div>
 
@@ -253,8 +253,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                 <img src="assets/img/songs/magnificat.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Magnificat VIII toni Lassus</h4>
-                  <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
+<!--                   <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+ -->                </div>
               </div>
             </div>
 
@@ -263,8 +263,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                 <img src="assets/img/songs/joana.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Porque não me vês Joana</h4>
-                  <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
+<!--                   <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+ -->                </div>
               </div>
             </div>
 
@@ -273,8 +273,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                 <img src="assets/img/songs/cancpalacio.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Dindirindin</h4>
-                  <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
+<!--                   <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+ -->                </div>
               </div>
             </div>
 
@@ -283,8 +283,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                 <img src="assets/img/songs/juandeencina.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Ay triste que vengo</h4>
-                  <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
+<!--                   <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+ -->                </div>
               </div>
             </div>
 
@@ -293,8 +293,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                 <img src="assets/img/songs/cancpalacio.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Pase'el agua, ma Julieta dama</h4>
-                  <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
+<!--                   <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+ -->                </div>
               </div>
             </div>
 
@@ -303,7 +303,7 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                   <img src="assets/img/songs/palestrina.jpg" class="figure-img img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>Ahi, che quest'occhi miei</h4>
-                    <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                    <a href="ahi-che-quest-occhi-miei.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
                   </div>
               </div>
             </div>
@@ -313,8 +313,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                 <img src="assets/img/songs/lassus.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>O occhi, manza mia</h4>
-                  <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
+<!--                   <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+ -->                </div>
               </div>
             </div>
 
@@ -323,8 +323,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                   <img src="assets/img/songs/dowland.jpg" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>Now, o now I needs must part</h4>
-                    <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                  </div>
+<!--                     <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+ -->                  </div>
               </div>
             </div>
 
@@ -333,8 +333,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                   <img src="assets/img/songs/arbeau.jpg" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>Belle qui tient ma vie</h4>
-                    <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                  </div>
+<!--                     <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+ -->                  </div>
               </div>
             </div>
 
@@ -343,8 +343,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                   <img src="assets/img/songs/ronsard.jpg" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>Mignonne, allons voir si la rose</h4>
-                    <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                  </div>
+<!--                     <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+ -->                  </div>
               </div>
             </div>
 
@@ -353,8 +353,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                   <img src="assets/img/songs/henryviii.webp" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>Pastime with good company</h4>
-                    <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                  </div>
+<!--                     <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+ -->                  </div>
               </div>
             </div>
 
@@ -363,8 +363,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                   <img src="assets/img/songs/hoycomamos.webp" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>Hoy comamos y bebamos</h4>
-                    <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                  </div>
+<!--                     <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+ -->                  </div>
               </div>
             </div>
 
@@ -373,8 +373,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                   <img src="assets/img/songs/sibilla.jpg" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>El cant de la Sibilla</h4>
-                    <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                  </div>
+<!--                     <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+ -->                  </div>
               </div>
             </div>
 
