Conserto filtro Sibilla

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
               </div>
             </div>
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item isotope-item filter-encina filter-anon">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item isotope-item filter-anon">
               <div class="portfolio-content h-100">
                   <img src="assets/img/songs/sibilla.jpg" class="img-fluid" alt="">
                   <div class="portfolio-info">
