Nav para repertório na música

--- a/jesu-rex-admirabilis.html
+++ b/jesu-rex-admirabilis.html
@@ -72,6 +72,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Início</a></li>
+            <li><a href="index.html#repertorio">Repertório</a></li>
             <li class="current">Jesu Rex Admirabilis</li>
           </ol>
         </nav>
