--- a/ahi-che-quest-occhi-miei.html
+++ b/ahi-che-quest-occhi-miei.html
@@ -72,6 +72,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Início</a></li>
+            <li><a href="index.html#repertorio">Repertório</a></li>
             <li class="current">Ahi, che quest'occhi miei</li>
           </ol>
         </nav>
