Template apresentação Santo Inácio

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
             <div>
               <h4 class="title">Igreja Santo Inácio</h4>
               <p class="description">16/11/2004, sábado, 18:00 hs</p>
-              <a href="service-details.html" class="readmore stretched-link"><span>Programação</span><i class="bi bi-arrow-right"></i></a>
+              <a href="20241116-sto-inacio.html" class="readmore stretched-link"><span>Programação</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -124,8 +124,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
               <h4 class="title">Igreja Santo Antônio dos Pobres</h4>
               <p class="description">13/12/2024, sexta-feira, 18:00 hs</p>
               <p class="description"> Apresentação com o Coro de Câmara da ACC</p>
-              <a href="service-details.html" class="readmore stretched-link"><span>Programação</span><i class="bi bi-arrow-right"></i></a>
-            </div>
+<!--               <a href="service-details.html" class="readmore stretched-link"><span>Programação</span><i class="bi bi-arrow-right"></i></a>
+ -->            </div>
           </div>
 
           <!-- End Service Item -->
