Mignonne usando template para musica

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+---
+
 <!DOCTYPE html>
 <!-- Update -->
 <html lang="en">
@@ -49,19 +52,7 @@
         <h1 class="sitename">Madrigal da ACC</h1>
       </a>
 
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="#hero" class="active">Início</a></li>
-          <li><a href="#repertorio">Repertório</a></li>
-          <li class="dropdown"><a href="#"><span>Apresentações</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#aprconfirmadas">Confirmadas</a></li>
-              <li><a href="#aprpassadas">Passadas</a></li>
-            </ul>
-          </li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
+      {% include navmenu.html %}
 
     </div>
   </header>
@@ -343,8 +334,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                   <img src="assets/img/songs/ronsard.jpg" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>Mignonne, allons voir si la rose</h4>
-<!--                     <a href="portfolio-details.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
- -->                  </div>
+                       <a href="mignonne.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                   </div>
               </div>
             </div>
 
