--- a/20241116-sto-inacio.html
+++ b/20241116-sto-inacio.html
@@ -134,15 +134,57 @@
           <div class="col-lg-8" data-aos="fade-up">
             
             <div class="portfolio-description">
-              <h2>Repertório</h2>
-              <ul>
+              <h2>Programação</h2>
+              <ol>
                 <li>
-                  <a href="jesu-rex-admirabilis.html">Jesu Rex Admirabilis</a></li>
+                  Non nobis Domine</a>
                 </li>
                 <li>
-                  <a href="ahi-che-quest-occhi-miei.html">Ahi che quest'occhi miei</a></li>
+                  <a href="jesu-rex-admirabilis.html">Jesu Rex Admirabilis</a>
                 </li>
-              </ul>
+                <li>
+                  <a href="ahi-che-quest-occhi-miei.html">Ahi che quest'occhi miei</a>
+                </li>
+                <li>
+                  Magnificat
+                </li>
+                <li>
+                  Por que me não ves Joana
+                </li>
+                <li>
+                  Dindirindin
+                </li>
+                <li>
+                  Ay triste que vengo
+                </li>
+                <li>
+                  Pase el agoa
+                </li>
+                <li>
+                  Ahi, che quest'occhi miei
+                </li>
+                <li>
+                  O occhi manza mia
+                </li>
+                <li>
+                  Now, o now I needs must part
+                </li>
+                <li>
+                  Belle qui tient ma vie
+                </li>
+                <li>
+                  <a href="mignonne.html">Mignonne, allons voir si la rose</a>
+                </li>
+                <li>
+                  Pastime with good company
+                </li>
+                <li>
+                  Sola me dejaste
+                </li>
+                <li>
+                  Hoy comamos y bebamos
+                </li>
+              </ol>
 
               <!--
               <div class="testimonial-item">
