--- a/20241116-sto-inacio.html
+++ b/20241116-sto-inacio.html
@@ -72,7 +72,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Início</a></li>
-            <li><a href="index.html#repertorio">Repertório</a></li>
+            <li><a href="index.html#aprconfirmadas">Apresentações</a></li>
             <li class="current">Igreja Santo Inácio, 16/11/2024</li>
           </ol>
         </nav>
