Arquivo de dados com musicas

--- a/20241116-sto-inacio.html
+++ b/20241116-sto-inacio.html
@@ -140,10 +140,10 @@
                   Non nobis Domine</a>
                 </li>
                 <li>
-                  <a href="jesu-rex-admirabilis.html">Jesu Rex Admirabilis</a>
+                  <a href="jesu-rex.html">Jesu Rex Admirabilis</a>
                 </li>
                 <li>
-                  <a href="ahi-che-quest-occhi-miei.html">Ahi che quest'occhi miei</a>
+                  <a href="ahi.html">Ahi che quest'occhi miei</a>
                 </li>
                 <li>
                   Magnificat
