--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                   <img src="assets/img/songs/palestrina.jpg" class="figure-img img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>Jesu Rex Admirabilis</h4>
-                    <a href="jesu-rex-admirabilis.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                    <a href="jesu-rex.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
                   </div>
               </div>
             </div>
@@ -294,7 +294,7 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                   <img src="assets/img/songs/palestrina.jpg" class="figure-img img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>Ahi, che quest'occhi miei</h4>
-                    <a href="ahi-che-quest-occhi-miei.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                    <a href="ahi.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
                   </div>
               </div>
             </div>
