Eventos em arquivo de dados

--- a/index.html
+++ b/index.html
@@ -100,24 +100,27 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
 
         <div class="row gy-4">
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon flex-shrink-0"><i class="bi bi-file-music"></i></div>
-            <div>
-              <h4 class="title">Igreja Santo Inácio</h4>
-              <p class="description">16/11/2004, sábado, 18:00 hs</p>
-              <a href="20241116-sto-inacio.html" class="readmore stretched-link"><span>Programação</span><i class="bi bi-arrow-right"></i></a>
+          {% for event in site.data.events %}
+            {% assign yyyymmdd = event[0] | split: "-" %}
+            {% assign event-date = yyyymmdd | slice: 0,3 | reverse | join: "/" %}
+            <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
+              <div class="icon flex-shrink-0"><i class="bi bi-file-music"></i></div>
+              <div>
+                <h4 class="title">{{ event[1].place }}</h4>
+                <p class="description">{{ event-date }}, {{ event[1].weekday }}, {{ event[1].time }} hs</p>
+                {% if event[1] contains "description" %}
+                  {% for desc in event[1].description %}
+                    <p class="description">{{ desc }}</p>
+                  {% endfor %}
+                {% endif %}
+                {% if event[1] contains "program" %}
+                  <a href="{{ event[0] }}.html" class="readmore stretched-link"><span>Programação</span><i class="bi bi-arrow-right"></i></a>
+                {% else %}
+                  <p class="description">Programação em breve</p>
+                {% endif %}
+              </div>
             </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon flex-shrink-0"><i class="bi bi-file-music"></i></div>
-            <div>
-              <h4 class="title">Igreja Santo Antônio dos Pobres</h4>
-              <p class="description">13/12/2024, sexta-feira, 18:00 hs</p>
-              <p class="description"> Apresentação com o Coro de Câmara da ACC</p>
-<!--               <a href="service-details.html" class="readmore stretched-link"><span>Programação</span><i class="bi bi-arrow-right"></i></a>
- -->            </div>
-          </div>
+          {% endfor %}
 
           <!-- End Service Item -->
 
