--- a/index.html
+++ b/index.html
@@ -220,10 +220,14 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
                 <div class="portfolio-content h-100">
                     <img src="assets/img/songs/{{song[1].image}}" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                      <h4>{{song[1].title}}</h4>
-                        {% if song[1] contains "description" %}
-                         <a href="{{song[0]}}.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                        {% endif %}
+                      {% if song[1] contains "description" %}
+                        <a href={{song[0]}}.html class="h4link">{{song[1].title}}</a>
+                      {% else %}
+                        <h4>{{song[1].title}}</h4>
+                      {% endif %}
+                      {% if song[1] contains "description" %}
+                        <a href="{{song[0]}}.html" title="Mais detalhes" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                      {% endif %}
                     </div>
                 </div>
               </div>
