--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@ a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slid
 
   </main>
 
-<!--   <footer id="footer" class="footer dark-background">
-
+<footer id="footer" class="footer dark-background">
+<!--
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
