Suporte caso nenhuma apresentação agendada

--- a/next.html
+++ b/next.html
@@ -1,4 +1,7 @@
 ---
-ppath: 2024-12-22-0.html
+ppath: 9999-12-31-0.html
 layout: event
 ---
+<!--
+Use 9999-12-31-0.html as ppath for no scheduled presentations
+-->
